[gd_scene load_steps=8 format=3 uid="uid://bxn454smvl6xj"]

[ext_resource type="Script" path="res://Scenes/user_name_screen.gd" id="1_ho0km"]
[ext_resource type="FontFile" uid="uid://chk5gg5vi6bxa" path="res://PixelifySans-VariableFont_wght.ttf" id="2_g6ynn"]
[ext_resource type="Texture2D" uid="uid://cyjsnhfnpvhor" path="res://Final Assets/sky_start_screen_parallax.png" id="2_y0ale"]
[ext_resource type="Texture2D" uid="uid://v2gtdym68oph" path="res://Final Assets/tree_start_screen_parallax.png" id="3_v7gkt"]
[ext_resource type="Texture2D" uid="uid://dcgvlr5mk6ery" path="res://Final Assets/button_unpressed.png" id="5_bgm0v"]
[ext_resource type="Texture2D" uid="uid://ctlt77hfiytln" path="res://Final Assets/button_pressed.png" id="6_01usq"]
[ext_resource type="Texture2D" uid="uid://dbvhyf0548agi" path="res://Final Assets/button_disabled.png" id="7_ejq7c"]

[node name="UserNameScreen" type="Node2D"]
script = ExtResource("1_ho0km")

[node name="Title" type="Label" parent="."]
offset_left = 165.0
offset_top = 58.0
offset_right = 377.0
offset_bottom = 103.0
theme_override_colors/font_color = Color(0.117647, 0, 0.658824, 1)
theme_override_fonts/font = ExtResource("2_g6ynn")
theme_override_font_sizes/font_size = 36
text = "Welcome!"

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 98.0
offset_top = 130.0
offset_right = 396.0
offset_bottom = 184.0
theme_override_fonts/font = ExtResource("2_g6ynn")
theme_override_font_sizes/font_size = 20
placeholder_text = "Please enter your first name"
alignment = 1
max_length = 12

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sky" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.3, 0.3)
motion_mirroring = Vector2(500, 0)

[node name="SkyStartScreenParallax" type="Sprite2D" parent="ParallaxBackground/Sky"]
position = Vector2(251, 140)
texture = ExtResource("2_y0ale")
metadata/_edit_lock_ = true

[node name="Trees" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(500, 0)

[node name="TreeStartScreenParallax" type="Sprite2D" parent="ParallaxBackground/Trees"]
position = Vector2(251, 141)
texture = ExtResource("3_v7gkt")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = 98.0
offset_top = 184.0
offset_right = 395.0
offset_bottom = 211.0
color = Color(0.709804, 0.890196, 1, 1)

[node name="InvalidName" type="Label" parent="."]
visible = false
offset_left = 106.0
offset_top = 184.0
offset_right = 385.0
offset_bottom = 207.0
theme_override_colors/font_color = Color(0.870387, 1.44392e-06, 1.2514e-06, 1)
theme_override_fonts/font = ExtResource("2_g6ynn")
theme_override_font_sizes/font_size = 10
text = "Your name must not contain numbers, symbols, or spaces"

[node name="Contains" type="Label" parent="."]
visible = false
offset_left = 169.0
offset_top = 196.0
offset_right = 262.0
offset_bottom = 219.0
theme_override_colors/font_color = Color(0.870588, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_g6ynn")
theme_override_font_sizes/font_size = 10
text = "- contains"

[node name="InvalidCases" type="Label" parent="Contains"]
layout_mode = 0
offset_left = 50.0
offset_right = 143.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.870588, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_g6ynn")
theme_override_font_sizes/font_size = 10

[node name="EnterBtn" type="TextureButton" parent="."]
offset_left = 167.0
offset_top = 220.0
offset_right = 317.0
offset_bottom = 260.0
texture_normal = ExtResource("5_bgm0v")
texture_pressed = ExtResource("6_01usq")
texture_disabled = ExtResource("7_ejq7c")

[node name="Label" type="Label" parent="EnterBtn"]
layout_mode = 0
offset_left = 50.0
offset_top = 7.0
offset_right = 91.0
offset_bottom = 30.0
theme_override_fonts/font = ExtResource("2_g6ynn")
text = "Done"

[connection signal="text_changed" from="LineEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="pressed" from="EnterBtn" to="." method="_on_enter_btn_pressed"]
